--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,6 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,gradle
+/gradlew
+/gradlew.bat
+/settings.gradle
