포트 번호 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,6 @@ spring:
         format_sql: true
 
     defer-datasource-initialization: true # 앱 실행 시 테이블 생성 후 data.sql 실행
+
+server:
+  port: 9090
